Temporarily reverted to previous version of spark-submit page